# htmltabletomd

./: CHANGELOG.txt  LICENSE  MANIFEST.in  README.md  htmltabletomd.py  setup.cfg  tox.ini
tests/unit/: test_htmltabletomd.py
