[metadata]
name = htmltabletomd
version = 1.0.0
description = Convert html table to markdown table
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vsavo/htmltabletomd
author = Vijeyraj Savoundiraradjou
author_email = vijeysavy@gmail.com
keywords = markdown tables
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
py_modules = htmltabletomd
python_requires = >=3.6.1
packages = find:
install_requires =
    html2markdown
    beautifulsoup4
tests_require = pytest

[options.packages.find]
exclude = tests*

[bdist_wheel]
universal = True
